--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -119,22 +119,22 @@
                                 <tr >
                                 <td>
                                     <div class="hpu-label">
-                                    <span ng-bind="getIndexMomentHPU.t_Env | number:0">0</span>
+                                    <span><span ng-bind="getIndexMomentHPU.t_Env | number:0">0</span>℃</span>
                                     </div>
                                 </td>
                                 <td>
                                     <div class="hpu-label">
-                                    <span ng-bind="getIndexMomentHPU.waterPressure | number:0|waterPressureFilter">0</span>
+                                    <span><span ng-bind="getIndexMomentHPU.waterPressure | number:0|waterPressureFilter">0</span></span>
                                     </div>
                                 </td>
                                 <td>
                                     <div class="hpu-label">
-                                    <span ng-bind="getIndexMomentHPU.oilPressure | number:0">0</span>
+                                    <span><span ng-bind="getIndexMomentHPU.oilPressure | number:0"></span>psi</span>
                                     </div>
                                 </td>
                                 <td>
                                     <div class="hpu-label">
-                                    <span ng-bind="getIndexMomentHPU.saturation | number:0">0</span>
+                                    <span><span ng-bind="getIndexMomentHPU.saturation | number:0">0</span>%</span>
                                     </div>
                                 </td>
                                 </tr>
