--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -7,7 +7,7 @@
         min-height: 10px;
     }
     .col-md-4 .portlet > .portlet-title > .caption{
-        padding:1px 0;
+        padding: 5px 0;
     }
     .col-md-4 .table-condensed > thead > tr > th{
         padding: 0;
@@ -41,7 +41,7 @@
                 <div class="portlet patac-portlet">
                 <div class="portlet-title">
                     <div class="caption">
-                        <span class="caption-subject font-white uppercase">设备停启状态 </span>
+                        <span class="caption-subject font-white uppercase">设备启停状态 </span>
                     </div>
                 </div>
                 <div class="portlet-body">
@@ -80,7 +80,7 @@
                         </tbody>
                     </table>
                     <div style="position: absolute;top:138px;left:26px;color: #fff;font-size: 16px;"><span>Tractive Power</span></div>
-                    <div id="bar1" style="height:215px;">
+                    <div id="bar1" style="height:226px;">
 
                     </div>
                 </div>
