--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -32,7 +32,7 @@
                 <div class="portlet patac-portlet" style="height:400px;">
                 <div class="portlet-title">
                     <div class="caption">
-                        <span class="caption-subject font-white uppercase">设备七天停启状态 </span>
+                        <span class="caption-subject font-white uppercase">设备启停状态 </span>
                     </div>
                 </div>
                 <div class="portlet-body">
