--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -122,7 +122,7 @@
                 <div class="caption">
                     <span class="caption-subject font-white uppercase">日志</span>
                 </div>
-                <div class="btn-group btn-group-circle pull-right">
+                <div class="btn-group btn-group-circle pull-right" style="margin-left: 5px;">
                     <button class="btn btn-sm white active" href="javascript:;" ng-click="getWarnning('RPC')"> 
                                 RPC
                     </button>
@@ -130,7 +130,7 @@
                                 MPT
                     </button>
                 </div>
-                <div class="btn-group btn-group-circle pull-right">
+                <div class="btn-group btn-group-circle pull-right"  ng-show="MPT.show==1">
                     <!--<div class="btn-group btn-group-circle">-->
                         <button ng-click="getWarnning('RPC','warning')" class="btn btn-sm white active">报警</button>
                         <button ng-click="getWarnning('RPC','normal')" class="btn btn-sm white">其他</button>
