--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -123,10 +123,10 @@
                     <span class="caption-subject font-white uppercase">日志</span>
                 </div>
                 <div class="btn-group btn-group-circle pull-right" style="margin-left: 5px;">
-                    <button class="btn btn-sm white active" href="javascript:;" ng-click="getWarnning('RPC')"> 
+                    <button class="btn btn-sm white active" href="javascript:;" ng-click="showWarnningData('RPC')">
                                 RPC
                     </button>
-                    <button class="btn btn-sm white" href="javascript:;" ng-click="getWarnning('MPT')"> 
+                    <button class="btn btn-sm white" href="javascript:;" ng-click="showWarnningData('MPT')">
                                 MPT
                     </button>
                 </div>
@@ -137,7 +137,7 @@
                     <!--</div>-->
                 </div>
             </div>
-            <div class="portlet-body">
+            <div class="portlet-body" ng-show="RPC.show==1">
 
                 <table class="table table-striped table-bordered  order-column m-t-lg hide" id="rpc">
                     <thead>
@@ -152,7 +152,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="odd gradeX" ng-repeat="data in rpc" on-repeat-finished2>
+                        <tr class="odd gradeX" ng-repeat="data in RPC.data" on-repeat-finished2>
                             <!-- <td ng-bind="data.sequence"> shuxer </td> -->
                             <td ng-bind="data.time | date:'yyyy-MM-dd hh:mm:ss:sss'"></td>
                             <td ng-bind="data.sequence" style="white-space:normal"> shuxer </td>
@@ -163,6 +163,31 @@
 
 
                         </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="portlet-body" ng-show="MPT.show==1">
+
+                <table class="table table-striped table-bordered  order-column m-t-lg" id="mpt">
+                    <thead>
+                    <tr>
+                        <!-- <th> 报警信息 </th> -->
+                        <th> Time2 </th>
+                        <th> Sequence </th>
+                        <th> Channel </th>
+                        <th> CurrentValue </th>
+                        <th> LimitValue </th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="odd gradeX" ng-repeat="data in MPT.data" on-repeat-finished3>
+                        <!-- <td ng-bind="data.sequence"> shuxer </td> -->
+                        <td ng-bind="data.time | date:'yyyy-MM-dd hh:mm:ss:sss'"></td>
+                        <td ng-bind="data.equipNo" style="white-space:normal"> shuxer </td>
+                        <td ng-bind="data.level"> shuxer </td>
+                        <td ng-bind="data.msg"> shuxer </td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
