--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -49,7 +49,7 @@
                     <span style="color:#a6e528;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">运 行</span>
                     </div>
 
-                    <div id="bar2" style="height:188px;"></div>
+                    <div id="TimeStatus" style="height:188px;"></div>
                 </div>
                 </div>
             </div>
