--- a/dashboard/views/hpu.html
+++ b/dashboard/views/hpu.html
@@ -41,7 +41,7 @@
                     <span style="color:#31A82C;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">运 行</span>
                     </div>
 
-                    <div id="bar2" style="height:200px;"></div>
+                    <div id="TimeStatus" style="height:200px;"></div>
                     
                 </div>
                 </div>
