--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -37,7 +37,7 @@
                     <span style="color:#a6e528;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">运 行</span>
                     </div>
 
-                    <div id="bar1" style="height:200px;"></div>
+                    <div id="TimeStatus" style="height:200px;"></div>
                     
                 </div>
                 </div>
