--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -3,7 +3,7 @@
         padding:2px 2px;
     }
     .table-scrollable tbody>tr>td {
-        white-space: nowrap;
+        white-space: nowrap!important;
     }
 </style>
 <!-- BEGIN PAGE CONTENT-->
@@ -28,13 +28,13 @@
                 <div class="portlet patac-portlet" style="height:400px;">
                 <div class="portlet-title">
                     <div class="caption">
-                        <span class="caption-subject font-white uppercase">设备停启状态</span>
+                        <span class="caption-subject font-white uppercase">设备启停状态</span>
                     </div>
                 </div>
                 <div class="portlet-body">
                     <div>
                     
-                    <span style="color:#a6e528;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">运 行</span>
+                    <span style="color:#a6e528;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;" bind="statusText">运 行</span>
                     </div>
 
                     <div id="bar1" style="height:200px;"></div>
@@ -168,15 +168,14 @@
             </div>
             <div class="portlet-body" ng-show="MPT.show==1">
 
-                <table class="table table-striped table-bordered  order-column m-t-lg" id="mpt">
+                <table class="table table-striped table-bordered  order-column m-t-lg hide" id="mpt">
                     <thead>
                     <tr>
                         <!-- <th> 报警信息 </th> -->
-                        <th> Time2 </th>
-                        <th> Sequence </th>
-                        <th> Channel </th>
-                        <th> CurrentValue </th>
-                        <th> LimitValue </th>
+                        <th> Time </th>
+                        <th> EquipNo </th>
+                        <th> Level </th>
+                        <th> Msg </th>
 
                     </tr>
                     </thead>
