--- a/dashboard/views/bep.html
+++ b/dashboard/views/bep.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="portlet-body">
                     <div>
-                    <span style="color:#a6e528;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;">运 行</span>
+                    <span ng-style="statusColor" style="color:#a6e528;line-height:100px;display:block;margin:0 40px;font-size:24px;text-align:center;font-size:60px;font-weight:bold;" ng-bind="statusText">运 行</span>
                     </div>
 
                     <div id="TimeStatus" style="height:188px;"></div>
