--- a/dashboard/views/mts.html
+++ b/dashboard/views/mts.html
@@ -126,14 +126,14 @@
                     <button class="btn btn-sm white active" href="javascript:;" ng-click="showWarnningData('RPC')">
                                 RPC
                     </button>
-                    <button class="btn btn-sm white" href="javascript:;" ng-click="showWarnningData('MPT')">
+                    <button class="btn btn-sm white" href="javascript:;" ng-click="showWarnningData('MPT','warning')">
                                 MPT
                     </button>
                 </div>
                 <div class="btn-group btn-group-circle pull-right"  ng-show="MPT.show==1">
                     <!--<div class="btn-group btn-group-circle">-->
-                        <button ng-click="showWarnningData('MPT','warning')" class="btn btn-sm white active">报警</button>
-                        <button ng-click="showWarnningData('MPT','normal')" class="btn btn-sm white">其他</button>
+                        <button ng-click="showWarnningData('MPT','warning')" class="btn btn-sm white active" ng-class="{true :'active', false :''}[mptWarning.show==1]">报警</button>
+                        <button ng-click="showWarnningData('MPT','normal')" class="btn btn-sm white" ng-class="{true :'active', false :''}[mptNormal.show==1]">其他</button>
                     <!--</div>-->
                 </div>
             </div>
