--- a/dashboard/views/lab.html
+++ b/dashboard/views/lab.html
@@ -39,14 +39,14 @@
 	<div class="col-md-9">
 		<div class="chart-wrapper chart-wrapper-m" id="chartWrapper">
 			<div class="chart-meta">
-				<h3>1.6</h3>
-				<p>实验效能指数</p>
+				<h3>0</h3>
+				<p>试验效能指数</p>
 				<div class="progress">
-				  	<div class="progress-bar" role="progressbar" data-val="45.45"></div>
+				  	<div class="progress-bar" role="progressbar" data-val="0"></div>
 				</div>
 				<p>
 					<span class="left">同比</span>
-					<span class="right"><i class="fa fa-long-arrow-up"></i> <span class="chart-num">45.45</span>%</span>
+					<span class="right"><i class="fa"></i> <span class="chart-num">0</span>%</span>
 				</p>
 			</div>
 			<div class="chart-div" id="efficiencyCoeffDiv"></div>
@@ -94,14 +94,14 @@
 	<div class="col-md-3">
 		<div class="chart-wrapper">
 			<div class="chart-meta">
-				<h3 class="h3-red">91</h3>
+				<h3>0</h3>
 				<p>重点设备完好率(%)</p>
 				<div class="progress">
-				  	<div class="progress-bar progress-bar-red" role="progressbar" data-val="3.19"></div>
+				  	<div class="progress-bar" role="progressbar" data-val="0"></div>
 				</div>
 				<p>
 					<span class="left">同比</span>
-					<span class="right"><i class="fa fa-long-arrow-down"></i> <span class="chart-num">3.19</span>%</span>
+					<span class="right"><i class="fa "></i> <span class="chart-num">0</span>%</span>
 				</p>
 			</div>
 			<div class="chart-div" id="intactRateDiv"></div>
@@ -110,14 +110,14 @@
 	<div class="col-md-3">
 		<div class="chart-wrapper">
 			<div class="chart-meta">
-				<h3>54</h3>
+				<h3>0</h3>
 				<p>耐久型设备利用率(%)</p>
 				<div class="progress">
-				  	<div class="progress-bar" role="progressbar" data-val="50"></div>
+				  	<div class="progress-bar" role="progressbar" data-val="0"></div>
 				</div>
 				<p>
 					<span class="left">同比</span>
-					<span class="right"><i class="fa fa-long-arrow-up"></i> <span class="chart-num">50</span>%</span>
+					<span class="right"><i class="fa "></i> <span class="chart-num">0</span>%</span>
 				</p>
 			</div>
 			<div class="chart-div" id="utilizRateDiv"></div>
@@ -126,14 +126,14 @@
 	<div class="col-md-3">
 		<div class="chart-wrapper">
 			<div class="chart-meta">
-				<h3 class="h3-red">244</h3>
+				<h3>0</h3>
 				<p>非耐久型设备利用率(%)</p>
 				<div class="progress">
-				  	<div class="progress-bar progress-bar-red" role="progressbar" data-val="13.48"></div>
+				  	<div class="progress-bar" role="progressbar" data-val="0"></div>
 				</div>
 				<p>
 					<span class="left">同比</span>
-					<span class="right"><i class="fa fa-long-arrow-down"></i> <span class="chart-num">13.48</span>%</span>
+					<span class="right"><i class="fa "></i> <span class="chart-num">0</span>%</span>
 				</p>
 			</div>
 			<div class="chart-div" id="durautilizRateDiv"></div>
@@ -142,210 +142,17 @@
 	<div class="col-md-3">
 		<div class="chart-wrapper">
 			<div class="chart-meta">
-				<h3 class="h3-red">48</h3>
+				<h3>0</h3>
 				<p>在线设备开动率(%)</p>
 				<div class="progress">
-				  	<div class="progress-bar progress-bar-red" role="progressbar" data-val="4"></div>
+				  	<div class="progress-bar" role="progressbar" data-val="4"></div>
 				</div>
 				<p>
 					<span class="left">同比</span>
-					<span class="right"><i class="fa fa-long-arrow-down"></i> <span class="chart-num">4</span>%</span>
+					<span class="right"><i class="fa "></i> <span class="chart-num">0</span>%</span>
 				</p>
 			</div>
 			<div class="chart-div" id="startRateDiv"></div>
 		</div>
 	</div>
 </div>
-
-<script type="text/javascript">
-	$(function() {
-		//模拟报表数据
-		var hash = window.location.hash;
-		if(hash=="#/lab/LAB02") {
-			var dataObj = {
-				efficiencyCoeff: [2.0, 3.1, 1.4, 2.3, 2.7, 3.1, 2.0, 1.6], //实验效能系数
-				intactRate: [93, 93, 92, 92, 92, 91, 91, 91], //重点设备完好率
-				utilizRate: [43, 45, 46, 48, 49, 51, 52, 54], //耐久型设备利用率
-				durautilizRate: [266, 263, 260, 257, 254, 250, 247, 244], //非耐久型设备利用率
-				startRate: [51, 48, 50, 51, 48, 50, 51, 48] //在线设备开动率
-			};
-			//初始化进度条
-			$(".progress-bar").each(function() {
-				var w = $(this).data("val") + "%";
-				$(this).animate({
-					width: w
-				}, 800);
-			});
-		}else {
-			var dataObj = {
-				efficiencyCoeff: [2.0, 3.1, 1.4, 2.3, 2.7, 3.1, 2.0, 1.6], //实验效能系数
-				intactRate: [93, 93, 92, 92, 92, 91, 91, 91], //重点设备完好率
-				utilizRate: [0, 0, 0, 0, 0, 0, 0, 0], //耐久型设备利用率
-				durautilizRate: [256, 214, 212, 256, 215, 257, 245, 233], //非耐久型设备利用率
-				startRate: [42, 53, 51, 42, 53, 51, 42, 53] //在线设备开动率
-			};
-			//初始化进度条
-			var numArr = [1.6, 91, 0, 233, 53];
-			$(".chart-meta h3").each(function(i) {
-				$(this).html(numArr[i]);
-			});
-			var perArr = [45.45, 3.19, 0, 15.58, 3.92];
-			$(".progress-bar").each(function(i) {
-				var w = perArr[i] + "%";
-				$(this).animate({
-					width: w
-				}, 800);
-			});
-			$(".chart-num").each(function(i) {
-				$(this).html(perArr[i]);
-			});
-		}
-		
-		//初始化报表
-		var efficiencyCoeffChart = echarts.init(document.getElementById("efficiencyCoeffDiv")); //实验效能系数
-		var intactRateChart = echarts.init(document.getElementById("intactRateDiv")); //重点设备完好率
-		var utilizRateChart = echarts.init(document.getElementById("utilizRateDiv")); //耐久型设备利用率
-		var durautilizRateChart = echarts.init(document.getElementById("durautilizRateDiv")); //非耐久型设备利用率
-		var startRateChart = echarts.init(document.getElementById("startRateDiv")); //在线设备开动率
-
-		//报表配置项
-		var optBar = {
-			title: {show:false},
-            grid: {
-            	top: 0,
-            	left: 0,
-            	right: 0,
-            	bottom: 0
-            },
-            tooltip: {
-	        	show: true,
-	        	formatter: "{b0}: {c0}%",
-	        	trigger: 'item',
-		        axisPointer : {
-		            type : 'shadow'
-		        }
-	        },
-            xAxis: [{
-            	show: false,
-            	type: "category",
-                data: ["1月", "2月", "3月", "4月", "5月", "6月", "7月", "8月", "9月", "10月", "11月", "12月"],
-                axisLabel: {interval:0}
-            }],
-            yAxis: [{
-            	show: false,
-            	type: "value"
-            }],
-            series: [{
-            	name: "",
-                type: "bar",
-                markLine: {
-                	data: [{
-                		name: "平均值",
-                		type: "average"
-                	}],
-                	lineStyle: {
-                		normal: {color:"#5c9bd1"}
-                	}
-                }
-            }],
-            color: ["#2b475d"]
-		};
-		var optLine = {
-			title: {show:false},
-            grid: {
-            	top: 0,
-            	left: 0,
-            	right: 0,
-            	bottom: 0
-            },
-            tooltip: {
-	        	show: true,
-	        	formatter: "{b0}: {c0}",
-	        	trigger: 'axis',
-		        axisPointer : {
-		            type : 'shadow'
-		        }
-	        },
-            xAxis: [{
-            	show: false,
-            	type: "category",
-                data: ["1月", "2月", "3月", "4月", "5月", "6月", "7月", "8月", "9月", "10月", "11月", "12月"],
-                axisLabel: {interval:0}
-            }],
-            yAxis: [{
-            	show: false,
-            	type: "value"
-            }],
-            series: [{
-            	name: "",
-                type: "line",
-                areaStyle: {normal: {}},
-                markLine: {
-                	data: [{
-                		name: "平均值",
-                		type: "average"
-                	}],
-                	lineStyle: {
-                		normal: {color:"#ffc000"}
-                	}
-                }
-            }],
-            color: ["#ffbb00"]
-		};
-		
-		//配置报表
-		optLine.series[0].data = dataObj.efficiencyCoeff;
-		efficiencyCoeffChart.setOption(optLine);
-		optBar.series[0].data = dataObj.intactRate;
-		intactRateChart.setOption(optBar);
-		optBar.series[0].data = dataObj.utilizRate;
-		utilizRateChart.setOption(optBar);
-		optBar.series[0].data = dataObj.durautilizRate;
-		durautilizRateChart.setOption(optBar);
-		optBar.series[0].data = dataObj.startRate;
-		startRateChart.setOption(optBar);
-
-		//点击切换
-//		$(".chart-wrapper").on("click", function() {
-//			if(!$(this).hasClass("chart-wrapper-m")) {
-//				var chartId = $(this).find(".chart-div").attr("id");
-//				console.log(chartId);
-//				switch(chartId) {
-//					case "efficiencyCoeff": 
-//						efficiencyCoeff.dispose();
-//						break;
-//					case "intactRate":
-//						intactRateChart.dispose();
-//						intactRateChart = echarts.init(document.getElementById("intactRate"));
-//						optLine.series[0].data = dataObj.intactRate;
-//						intactRateChart.setOption(optLine);
-//						break;
-//					case "utilizRate":
-//						utilizRate.dispose();
-//						break;
-//					case "durautilizRate":
-//						durautilizRate.dispose();
-//						break;
-//					case "startRate": 
-//						startRate.dispose();
-//						break;
-//					default: 
-//						break;
-//				};
-//				
-//				var html1 = $(this).html();
-//				$("#chartWrapper").empty().html(html1);
-//				$(this).empty();
-//			}
-//		});
-	});
-	
-	//浏览器窗口改变时，重置报表大小
-	$(window).resize(function() {
-		efficiencyCoeffChart.resize();
-		intactRateChart.resize();
-		utilizRateChart.resize();
-		durautilizRateChart.resize();
-		startRateChart.resize();
-	});
-</script>
